fix(Table): Wrap header actions conditionally

--- a/src/table/table.scss
+++ b/src/table/table.scss
@@ -37,8 +37,8 @@
 
   .iui-cell:not(.iui-slot) {
     @include iui-focus;
-    flex-wrap: wrap;
     column-gap: $iui-xs;
+    padding-block: $iui-baseline * 0.5;
 
     &.iui-actionable {
       cursor: pointer;
@@ -48,12 +48,8 @@
       cursor: grabbing;
     }
 
-    .iui-filter-button {
-      margin-right: $iui-s;
-
-      &:not(.iui-active) {
-        visibility: hidden;
-      }
+    .iui-filter-button:not(.iui-active) {
+      visibility: hidden;
     }
 
     > .iui-resizer {
@@ -160,6 +156,9 @@
   display: flex;
   flex-grow: 1;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  margin-right: $iui-sm;
 }
 
 @mixin iui-table-body {
@@ -453,9 +452,8 @@
   }
 
   .iui-cell-end-icon {
-    width: $iui-l;
-    height: $iui-l;
-    margin-right: $iui-sm;
-    margin-left: auto;
+    // Hardcoded size of the borderless button so that the icons are centered
+    width: 28px;
+    height: 28px;
   }
 }
